# scimate-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
scimate_agent/: agent.py  config.py  event.py  interrupt.py  role.py  serve.py  state.py
scimate_agent/app/: __init__.py  app.py  main.py  settings.py  websocket.py
scimate_agent/app/middlewares/: __init__.py  correlation.py
scimate_agent/nodes/: __init__.py  code_generator.py  code_interpreter.py  code_verifier.py  human.py  planner.py
scimate_agent/nodes/code_executor/: __init__.py  code_executor.py  utils.py
scimate_agent/nodes/code_executor/kernel/: config.py  launcher.py  logging.py
scimate_agent/nodes/code_executor/runtime/: __init__.py  context.py  executor.py
scimate_agent/nodes/code_executor/session/: __init__.py  client.py  common.py  environment.py  manager.py
scimate_agent/plugins/: __init__.py  context.py  manager.py  plugin.py  register.py
scimate_agent/plugins/builtins/: tavily_search.py
scimate_agent/plugins/builtins/inspect_dataset/: inspect_dataset.py
scimate_agent/plugins/builtins/tavily_search/: .metadata.yaml  __init__.py  spec.yaml  tavily_search.py
scimate_agent/prompts/: __init__.py  prompt.py
scimate_agent/prompts/assets/: code_generator_conv_head.txt  code_generator_requirements.txt  code_generator_system_message.txt  code_generator_user_message.txt  planner_system_message.txt
scimate_agent/state/: __init__.py  attachment.py  plugin.py  post.py  round.py  state.py
scimate_agent/utils/: __init__.py  env.py  logging.py  yaml.py
(+4 files in other folders)
